翻译部分内容

--- a/i18n/zh/docusaurus-plugin-content-docs/03-online-shop/06-wechat/_category_.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/03-online-shop/06-wechat/_category_.json
@@ -1,8 +1,8 @@
 {
-    "label": "WeChat",
+    "label": "微信",
     "position": 2,
     "link":{
         "type": "generated-index",
-        "description":"WeChat related documents"
+        "description":"微信支付相关文档"
     }
 }
