--- a/i18n/zh/docusaurus-plugin-content-docs/03-online-shop/07-alipay/_category_.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/03-online-shop/07-alipay/_category_.json
@@ -1,8 +1,8 @@
 {
-    "label": "Alipay",
+    "label": "支付宝",
     "position": 1,
     "link":{
         "type": "generated-index",
-        "description":"Alipay related documents"
+        "description":"支付宝支付相关文档"
     }
 }
