--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "Developer Centre",
+    "message": "开发者中心",
     "description": "The title in the navbar"
   },
   "logo.alt": {
@@ -8,11 +8,11 @@
     "description": "The alt text of navbar logo"
   },
   "item.label.Home": {
-    "message": "Home",
+    "message": "主页",
     "description": "Navbar item with label Home"
   },
   "item.label.Integration": {
-    "message": "Integration",
+    "message": "文档整合",
     "description": "Navbar item with label Integration"
   }
 }
