--- a/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -12,7 +12,7 @@
     "description": "Navbar item with label Home"
   },
   "item.label.Integration": {
-    "message": "文档整合",
+    "message": "接口文档",
     "description": "Navbar item with label Integration"
   }
 }
