--- a/i18n/zh-Hans/docusaurus-theme-classic/footer.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/footer.json
@@ -1,6 +1,6 @@
 {
   "copyright": {
-    "message": "QFPay Haojin Fintech Limited / iFlare Hong Kong Limited / Q Square Company Limited © 2024  |  Unit A, 27/F, West Gate Tower, 7 Wing Hong Street, Lai Chi Kok, Kowloon, Hong Kong |  All Rights Reserved",
+    "message": "QFPay Haojin Fintech Limited / QFPay Haojin Services Limited / iFlare Hong Kong Limited © 2024  |  Unit A, 27/F, West Gate Tower, 7 Wing Hong Street, Lai Chi Kok, Kowloon, Hong Kong |  All Rights Reserved",
     "description": "The footer copyright"
   }
 }
